assets/css/programming_package.css
.wrapper{
    max-width: 1260px;
    position: relative;
    padding: 20px;
    margin: 0 auto;
}
.undrl a{
    text-decoration: underline !important;
}

h5{
    font-weight: bold;
    
}
.rst{
    margin:0 auto;
    width:80px;
}

.cntr{
    text-align: center;
}
.detail{
    font-size: 1em;
    letter-spacing:1px;
}

.header{
    text-align: center;
    letter-spacing:1px;
}

h5 span{
    font-weight: normal;
}
.noflcenter{
    float:none !important;
    margin:0 auto !important;
}
.nlb ul{
    padding-left:0;
}
img {
    min-width:12px;
}
#step5Box .col-sm-4 a{text-decoration: underline !important;}

.blbg{
    background-color: #0567AE;
    color: #fff;
    padding:20px;
    margin:5px 0;
    min-height:147px;
    overflow: hidden;
    padding-top:5px;
    border-radius: 5px;
}
.orbg{
    background-color: #009EDB;
    color: #fff;
    padding:20px;
    margin:5px 0;
    min-height:147px;
    overflow: hidden;
    padding-top:5px;
    border-radius: 5px;   
}

.bgwt{background-color: #fff;
    border-radius: 5px;
    padding:20px;
    margin:5px 0;
    min-height:147px;
    overflow: hidden;
    padding-top:5px
}
.mnh2{
    min-height:243px;
}
.mnh3{
    min-height:329px;
}
.marr0{
    margin-right:0;    
}
.marl0{
    margin-left:0;    
}
.marb10{
    margin-bottom:10px !important;    
}
.steps {
    background-image:url('../img/pp_headings_sprite.png');
    background-repeat: no-repeat;
}
.stp1 {
    height: 30px;
    width: 70px;
    background-position: -10px -40px;
    display: inline-block;
}
.stp2 {
    height: 30px;
    width: 70px;
    background-position: -10px -77px;
    display: inline-block;
}
.stp3{
    height: 30px;
    width: 70px;
    background-position: -10px -113px;
    display: inline-block;
}
.stp4 {
    height: 30px;
    width: 70px;
    background-position: -10px -150px;
    display: inline-block;
}
.stp5 {
    height: 30px;
    width: 70px;
    background-position: -10px -185px;
    display: inline-block;
}

.title1 {
    height: 33px;
    width: 150px;
    background-position: -7px -5px;
    margin:0 auto;
}
.title2 {
    height: 33px;
    width: 140px;
    background-position: -10px -220px;
    margin:0 auto;
}
.title3 {
    height: 33px;
    width: 95px;
    background-position: -10px -258px;
    display: inline-block;
}

.pd30 {
    padding:20px 30px !important;
}
.container-fluid {
    height:100%;
}

#container1 p strong , #container2 p strong {
    text-transform: uppercase;
    font-size: 1.3em;
    color:#e97400;
}

#container1 p , #container2 p {
    display: inline-block;
}
.hdr p {
    position: absolute;
    top: 8px;
    left: 95px;
}
.hdr {
    margin-bottom: 10px;
}
#step1Box div.bgwt.marr0 p ~ p {
    margin-top:5px !important;
}

li#summaryBox {
    color:#000;
    text-align:left;
}

#programming_package {
    margin:0;
    padding:0;
    text-align:center;
    font:11.2px/1 Arial,sans-serif;
    padding-bottom:0;
}
.btn-default{
    background-color: #009EDB;
    color: #fff;
    border-radius: 0px;
    border:0;
}
.btn-default:hover,.btn-default:focus{
    background-color:#009EDB !important;
    color: #fff !important;
}
.btn-default:active{
    background-color: #009EDB !important;
}

#programming_package A:link {
    color:#070872;
    text-decoration:none
}

#programming_package A:active {
    color:#070872;
    text-decoration:none
}

#programming_package A:visited {
    color:#070872;
    text-decoration:none
}

A.step3:link {
    color:#070872;
    text-decoration:underline;
    white-space:nowrap
}

A.step3:active {
    color:#070872;
    text-decoration:underline;
    white-space:nowrap
}

A.step3:visited {
    color:#070872;
    text-decoration:underline;
    white-space:nowrap
}

A.step3:hover {
    color:#F60;
    text-decoration:underline;
    white-space:nowrap
}

/* used only for the MDU:TMU package table  */
A.step4:link {
    color:#070872;
    text-decoration:underline;
    white-space:nowrap;
    font-size:smaller
}

A.step4:active {
    color:#070872;
    text-decoration:underline;
    white-space:nowrap;
    font-size:smaller
}

A.step4:visited {
    color:#070872;
    text-decoration:underline;
    white-space:nowrap;
    font-size:smaller
}

A.step4:hover {
    color:#F60;
    text-decoration:underline;
    white-space:nowrap;
    font-size:smaller
}

div#centerContent {
    position:relative;
    vertical-align:middle;
    z-index:0;
    text-align:left;
    overflow:hidden
}

.centerSpan {
    height:40px;
    table-layout:inline;
    margin-top:13px
}

.headerTable {
    width:210px;
}

.hboPrices {
    width:120px
}

.dvrInnerboxHeadAndLine {
    font-weight:700;
    border-bottom:1px;
    border-bottom-style:solid;
    border-bottom-color:#000;
    width:30%
}

li#totalsBox {
    color:#000;
}

li.primaryCredit {
    color:#000
}

.primaryCredit .innerboxHeadBig {
    font-size:11px;
    font-weight:400;
    letter-spacing:-1px;
    padding-top:11px;
}

.innerboxHead {
    font-weight:700
}

.innerboxHeadAndLine {
    font-weight:700;
    border-bottom:1px;
    border-bottom-style:solid;
    border-bottom-color:#000
}

.innerboxHeadBig {
    font:bold 105% Verdana,Arial,sans-serif
}

.innerboxText {
    font-stretch:extra-condensed;
    white-space:nowrap
}

.packageImage {
    height:30px;
    width:50px
}

.nlb2 {
    color:#070872;
    text-align:left
}

#lyr2ndMonth{
    padding:0 5px;
}

form li {list-style: none}

@media (min-width: 768px){
    ul#container1 , ul#container2{
    z-index:5;
    padding:0;
    margin-bottom:40px;
    }
    .pdr0{
        padding-right:0 !important;    
    }
    .pdl0{
        padding-left:0 !important;    
    }
    .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, 
    .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
        padding-left: 10px;
    }     
}

@media (max-width: 767px){
    #step1Box , #step2Box , #step3Box , #step4Box , #step5Box , #step6Box , #centerContent, #container1, #container2{
        padding-left:0 !important;
        padding-right:0 !important;
    }
}

